prevent zoom on safari

--- a/src/app.css
+++ b/src/app.css
@@ -78,3 +78,11 @@ select {
 	font: inherit;
 	color: inherit;
 }
+
+@media (max-width: 767px) {
+	input,
+	textarea,
+	select {
+		font-size: 16px !important;
+	}
+}
